# flask-security-medium-example

./: LICENSE  README.md  pyproject.toml  run.py
app/: __init__.py  config.json  routes.py  views.py
app/static/: index.js  indextldr.js
app/templates/: index.html
cert/: .gitignore
